--- a/assets/styles.css
+++ b/assets/styles.css
@@ -13,7 +13,8 @@ tfoot {
 }
 
 fieldset.scheduler-border {
-  border: 1px groove gray !important;
+  border-color: #428bca !important;
+  border-style: solid;
   padding: 0 1.4em 1.4em 1.4em !important;
   margin: 0 0 1.5em 0 !important;
   -webkit-box-shadow:  0px 0px 0px 0px #000;
@@ -22,7 +23,7 @@ fieldset.scheduler-border {
 }
 
 legend.scheduler-border {
-  font-size: 1.2em !important;
+  font-size: 1.1em !important;
   font-weight: bold !important;
   text-align: left !important;
   border-bottom:0;
