--- a/assets/odontograma/pug/hallazgos.pug
+++ b/assets/odontograma/pug/hallazgos.pug
@@ -1,24 +1,29 @@
 - var n = 1;
   while n <= 52
-    div(class="hallazgos corona corona-"+n)
+    div(class="hallazgos corona bueno corona-"+n)
     - n++
 
-- var n = 1;
+//- var n = 1;
   while n <= 52
     div(class="hallazgos erupcion erupcion-"+n)
     - n++
 
-- var n = 1;
+//- var n = 1;
   while n <= 52
-    div(class="hallazgos aparatoOrtoFijoBuenInicio aparatoOrtoFijoBuenInicio-"+n)
+    div(class="hallazgos aparatoOrtoFijoInicio bueno aparatoOrtoFijoInicio-"+n)
     - n++
 
--var n = 1;
+//-var n = 1;
   while n <= 52
-    div(class="hallazgos aparatoOrtoFijoBuenFin aparatoOrtoFijoBuenFin-"+n)
+    div(class="hallazgos aparatoOrtoFijoFin bueno aparatoOrtoFijoFin-"+n)
     - n++
 
-- var n = 1;
+//- var n = 1;
   while n <= 52
-    div(class="hallazgos lineaBuen lineaBuen-"+n)
+    div(class="hallazgos linea malo linea-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos bueno aparatoOrtoRemovible aparatoOrtoRemovible-"+n)
     - n++
