--- a/assets/odontograma/scss/odontograma.scss
+++ b/assets/odontograma/scss/odontograma.scss
@@ -9,7 +9,6 @@ $altoDiente: 9.6%;
 $altoDienteCentro: 9.7%;
 
 #odontograma-contenido{
-	border: 1px solid red;
 	position: relative;
 	img{
 		vertical-align: middle;
@@ -18,9 +17,31 @@ $altoDienteCentro: 9.7%;
 	.cursor{
 		position: absolute;
 		width: $anchoDiente;
-		z-index: 500;
+		z-index: 1000;
 		&:hover{
-			/*box-shadow: 0px 2px 29px -6px rgba(0,0,0,0.75);*/
+			cursor: pointer;
+			border-radius: 3px;
+			box-shadow: 0px 2px 29px -6px rgba(0,0,0,0.75);
+		}
+	}
+
+	.recuadro{
+		position: absolute;
+		width: $anchoDiente;
+		height: 2.7%;
+		font-size: 7.6px;
+		word-wrap: break-word;
+		font-weight: 100;
+		span{
+			display: inline;
+			letter-spacing: -0.5px;
+			line-height: 0%;
+			&.bueno{
+				color:#0040FF;
+			}
+			&.malo{
+				color:#FF0000;
+			}
 		}
 	}
 	
@@ -33,37 +54,74 @@ $altoDienteCentro: 9.7%;
 	
 	.corona{
 		background-size: 90% auto;
-		background-image: url('../images/corona.png');
+		&.bueno{
+			background-image: url('../images/corona_buen.png');
+		}
+		&.malo{
+			background-image: url('../images/corona_mal.png');
+		}
 	}
+	
 
 	.erupcion{
 		background-size: 40% auto;
 		background-image: url('../images/erupcion.png');
 	}
 
-	.aparatoOrtoFijoBuenInicio{
-		background-image: url('../images/AparatoOrtoFijoBueno.png');
+	.aparatoOrtoFijoInicio{
 		height: 3%;
 		background-size: cover;
+		&.bueno{
+			background-image: url('../images/AparatoOrtoFijoBueno.png');
+		}
+		&.malo{
+			background-image: url('../images/AparatoOrtoFijoMalo.png');
+		}
 	}
 
-	.aparatoOrtoFijoBuenFin{
-		background-image: url('../images/AparatoOrtoFijoBueno.png');
+	.aparatoOrtoFijoFin{
 		height: 3%;
 		background-size: cover;
 		transform: rotate(180deg);
+		&.bueno{
+			background-image: url('../images/AparatoOrtoFijoBueno.png');
+		}
+		&.malo{
+			background-image: url('../images/AparatoOrtoFijoMalo.png');
+		}
 	}
 
-	.lineaBuen{
-		background-image: url('../images/lineaAzul.png');
+	.linea{
 		height: 3%;
 		background-size: cover;
+		&.bueno{
+			background-image: url('../images/lineaBuena.png');
+		}
+		&.malo{
+			background-image: url('../images/lineaMala.png');
+		}
+	}
+
+	.aparatoOrtoRemovible{
+		height: 3.1%;
+		background-size: cover;
+		&.bueno{
+			background-image: url('../images/AparatoOrtoRemovibleBueno.png');
+		}
+		&.malo{
+			background-image: url('../images/AparatoOrtoRemovibleMalo.png');
+		}
 	}
 	//CUADRANTE UNO
 	@for $i from 1 through 16{
 		.cursor-#{$i} {
 			height: $altoDiente;
 			top: 10.5%;
+			left: (($i - 1) * $anchoDiente);
+		}
+
+		.recuadro-#{$i} {
+			top: 0%;
 			left: (($i - 1) * $anchoDiente);
 		}
 		.corona-#{$i}{
@@ -80,9 +138,14 @@ $altoDienteCentro: 9.7%;
 			background-position-y: 35%;
 		}
 
-		.aparatoOrtoFijoBuenInicio-#{$i},.aparatoOrtoFijoBuenFin-#{$i}, .lineaBuen-#{$i}{
+		.aparatoOrtoFijoInicio-#{$i},.aparatoOrtoFijoFin-#{$i}, .linea-#{$i}{
 			left: (($i - 1) * $anchoDiente);
 			top: 3.5%;
+		}
+
+		.aparatoOrtoRemovible-#{$i}{
+			left: (($i - 1) * $anchoDiente);
+			top: 4%;
 		}
 	}
 
@@ -92,6 +155,11 @@ $altoDienteCentro: 9.7%;
 			height: $altoDienteCentro;
 			top: 34%;
 			left: ($i - 14) * $anchoDiente;
+		}
+
+		.recuadro-#{$i} {
+			top: 25%;
+			left: (($i - 14) * $anchoDiente);
 		}
 
 		.corona-#{$i}{
@@ -108,7 +176,12 @@ $altoDienteCentro: 9.7%;
 			background-position-y: 35%;
 		}
 
-		.aparatoOrtoFijoBuenInicio-#{$i}, .aparatoOrtoFijoBuenFin-#{$i}, .lineaBuen-#{$i}{
+		.aparatoOrtoFijoInicio-#{$i}, .aparatoOrtoFijoFin-#{$i}, .linea-#{$i}{
+			left: (($i - 14) * $anchoDiente);
+			top: 30%;
+		}
+
+		.aparatoOrtoRemovible-#{$i}{
 			left: (($i - 14) * $anchoDiente);
 			top: 30%;
 		}
@@ -123,6 +196,12 @@ $altoDienteCentro: 9.7%;
 			top: 54.5%;
 			left: ($i - 24) * $anchoDiente;
 		}
+
+		.recuadro-#{$i} {
+			top: 70.3%;
+			left: (($i - 24) * $anchoDiente);
+		}
+
 		.corona-#{$i}{
 			height: $altoDienteCentro;
 			left: (($i - 24) * $anchoDiente)-0.1%; //CORRECCION
@@ -138,9 +217,15 @@ $altoDienteCentro: 9.7%;
 			transform: rotate(180deg);
 		}
 
-		.aparatoOrtoFijoBuenInicio-#{$i}, .aparatoOrtoFijoBuenFin-#{$i}, .lineaBuen-#{$i}{
+		.aparatoOrtoFijoInicio-#{$i}, .aparatoOrtoFijoFin-#{$i}, .linea-#{$i}{
 			left: (($i - 24) * $anchoDiente);
 			top: 66.5%;
+		}
+
+		.aparatoOrtoRemovible-#{$i}{
+			left: (($i - 24) * $anchoDiente);
+			top: 65%;
+			transform: rotate(180deg);
 		}
 	}
 
@@ -150,6 +235,11 @@ $altoDienteCentro: 9.7%;
 			height: $altoDiente;
 			top: 78.8%;
 			left: ($i - 37) * $anchoDiente;
+		}
+
+		.recuadro-#{$i} {
+			bottom: 0;
+			left: (($i - 37) * $anchoDiente);
 		}
 
 		.corona-#{$i}{
@@ -167,9 +257,15 @@ $altoDienteCentro: 9.7%;
 			transform: rotate(180deg);
 		}
 
-		.aparatoOrtoFijoBuenInicio-#{$i}, .aparatoOrtoFijoBuenFin-#{$i}, .lineaBuen-#{$i}{
+		.aparatoOrtoFijoInicio-#{$i}, .aparatoOrtoFijoFin-#{$i}, .linea-#{$i}{
 			left: (($i - 37) * $anchoDiente);
 			top: 93.5%;
+		}
+
+		.aparatoOrtoRemovible-#{$i}{
+			left: (($i - 37) * $anchoDiente);
+			top: 92.5%;
+			transform: rotate(180deg);
 		}
 	}
 
