--- a/assets/odontograma/pug/index.pug
+++ b/assets/odontograma/pug/index.pug
@@ -8,7 +8,7 @@ html(lang="en")
     link(rel="stylesheet", href="css/odontograma.css")
   body
   #odontograma
-    #odontograma-contenido
+    #odontograma-contenido.inicio
       img(src="images/plantilla_nuevo05.png",width=800)
       include cursores.pug
       include hallazgos.pug
