--- a/assets/odontograma/pug/cursores.pug
+++ b/assets/odontograma/pug/cursores.pug
@@ -4,7 +4,7 @@
     li= index + ': ' + val
 - var n = 1;
    each val, index in array
-    div(id="diente-"+val,class="cursor cursor-"+index, data-diente=""+val)
+    div(id="diente-"+val,class="cursor inicioSelec cursor-"+index, data-diente=""+val, data-orden=""+index)
     - n++
 
 - var n = 1;
