--- a/assets/odontograma/pug/hallazgos.pug
+++ b/assets/odontograma/pug/hallazgos.pug
@@ -1,11 +1,6 @@
-- var n = 1;
-  while n <= 52
-    div(class="hallazgos corona bueno corona-"+n)
-    - n++
-
 //- var n = 1;
   while n <= 52
-    div(class="hallazgos erupcion erupcion-"+n)
+    div(class="hallazgos corona bueno corona-"+n)
     - n++
 
 //- var n = 1;
@@ -20,10 +15,55 @@
 
 //- var n = 1;
   while n <= 52
-    div(class="hallazgos linea malo linea-"+n)
+    div(class="hallazgos linea bueno linea-"+n)
     - n++
 
 //- var n = 1;
   while n <= 52
     div(class="hallazgos bueno aparatoOrtoRemovible aparatoOrtoRemovible-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos coronaTemporal malo coronaTemporal-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos diastema diastema-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos piezaAusente piezaAusente-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos piezaClavija piezaClavija-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos erupcion erupcion-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos piezaExtruida piezaExtruida-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos piezaIntruida piezaIntruida-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos piezaSupernumeraria piezaSupernumeraria-"+n)
+    - n++
+
+- var n = 1;
+  while n <= 52
+    div(class="hallazgos edentulo edentulo-"+n)
     - n++
