--- a/assets/odontograma/pug/index.pug
+++ b/assets/odontograma/pug/index.pug
@@ -8,8 +8,8 @@ html(lang="en")
     link(rel="stylesheet", href="css/odontograma.css")
   body
   #odontograma
-    #odontograma-contenido.fin
-      img(src="images/plantilla_nuevo05.png",width=800)
+    #odontograma-contenido
+      img(src="images/plantilla_nuevo10.png",width=800)
       include cursores.pug
       include hallazgos.pug
 
