--- a/assets/odontograma/pug/hallazgos.pug
+++ b/assets/odontograma/pug/hallazgos.pug
@@ -143,7 +143,32 @@
     div(class="hallazgos tratamientoPulparTC-PC bueno tratamientoPulparTC-PC-"+n)
     - n++
 
-- var n = 1;
+//- var n = 1;
   while n <= 52
     div(class="hallazgos tratamientoPulparPP bueno tratamientoPulparPP-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos lesionCaries direccion-arriba centro direccion-arriba-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos lesionCaries direccion-abajo centro direccion-abajo-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos lesionCaries direccion-izquierda centro direccion-izquierda-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos lesionCaries direccion-derecha centro direccion-derecha-"+n)
+    - n++
+
+- var n = 1;
+  while n <= 52
+    div(class="hallazgos lesionCaries direccion-centro direccion-centro-"+n)
     - n++
