--- a/assets/odontograma/scss/odontograma.scss
+++ b/assets/odontograma/scss/odontograma.scss
@@ -1,3 +1,125 @@
+$categoria_18_11: 18 17 16 15 14 13 12 11 21 22 23 25 26 27 28 55 54 53 52 51 61 62 63 64 65 85 84 83 82 81 71 72 73 74 75 48 47 46 45 44 43 42 41 31 32 33 34 35 36 37 38;
+#dibujar{
+	#pieza{
+		max-width: 60px;
+		position: relative;
+		img{
+			width: 100%;
+			vertical-align: middle;
+			&.rotar{
+				transform: rotate(180deg);
+			}
+		}
+		.direccionPieza{
+			background-size: 100%;
+			background-repeat: no-repeat;
+			background-position: center center;
+			position: absolute;
+		}
+		
+		&.categoria-centro{
+			#direccionPieza{
+				&-centro{
+					bottom: 10%;
+					width: 100%;
+					height: 20px;
+					background-size: 50%;
+					&.lesionCaries{
+						background-image: url('../images/marcador_lesioncaries_center.png');
+					}
+					&.giro{
+						top: 10.5%;
+					}
+				}
+				&-arriba,&-abajo{
+					width: 100%;
+					height: 10px;
+					background-size: 90% 90%;
+					&.lesionCaries{
+						background-image: url('../images/marcador01_lesioncaries_top_bottom.png');
+					}
+				}
+				&-arriba{
+					top: 55%;
+					&.giro{
+						top: 0;
+					}
+				}
+				&-abajo{
+					bottom: 1%;
+					transform: rotate(180deg);
+					&.giro{
+						top: 33%;
+					}
+				}
+				&-derecha,&-izquierda{
+					width: 15px;
+					height: 38px;
+					background-size: 90% 90%;
+					&.lesionCaries{
+						background-image: url('../images/marcador01_lesioncaries_left_right.png');
+					}
+					bottom: 0%;
+					&.giro{
+						top: 0%;
+					}
+				}
+				&-derecha{
+					right: 0;
+					transform: rotate(180deg);
+				}
+			}
+		}
+
+		&.categoria-nocentro{
+			#direccionPieza{
+				&-arriba,&-abajo{
+					width: 98%;
+					height: 18px;
+					&.lesionCaries{
+						background-image: url('../images/marcador02_lesioncaries_top_bottom.png');
+					}
+				}
+				&-arriba{
+					top: 55%;
+					&.giro{
+						top: 0;
+					}
+				}
+				&-abajo{
+					bottom: 1%;
+					transform: rotate(180deg);
+					&.giro{
+						top: 22%;
+					}
+				}
+				&-izquierda,&-derecha{
+					width: 12px;
+					height: 38px;
+					background-size: 90% 90%;
+					&.lesionCaries{
+						background-image: url('../images/marcador02_lesioncaries_left_right.png');
+					}
+					bottom: 0%;
+					&.giro{
+						top: 0;
+					}
+				}
+				&-derecha{
+					right: 1%;
+					transform: rotate(180deg);
+				}
+			}
+		}
+		
+	}
+
+	//@each $num in $piezas_tres{
+	//	.pieza-#{$num}{
+	//		color:white;
+	//	}
+	//}
+}
 #odontograma{
   display: flex;
   align-items: start;
@@ -316,6 +438,52 @@ $altoDienteCentro: 9.7%;
 		}
 	}
 
+	.direccion-derecha,.direccion-izquierda{
+		height: 4%;
+		width: 1.2%;
+		background-size: 100% 100%;
+		&.centro{
+			&.lesionCaries{
+				background-image: url('../images/marcador01_lesioncaries_left_right.png');
+			}
+		}
+		&.nocentro{
+			&.lesionCaries{
+				background-image: url('../images/marcador02_lesioncaries_left_right.png');
+			}
+		}
+	}
+
+	.direccion-arriba,.direccion-abajo{
+		height: 1.2%;
+		width: 5.2%;
+		background-size: 100% 100%;
+		&.centro{
+			&.lesionCaries{
+				background-image: url('../images/marcador01_lesioncaries_top_bottom.png');
+			}
+		}
+		&.nocentro{
+			height: 2%;
+			&.lesionCaries{
+				background-image: url('../images/marcador02_lesioncaries_top_bottom.png');
+			}
+		}
+	}
+
+	.direccion-abajo,.direccion-derecha{
+		transform: rotate(180deg);
+	}
+
+	.direccion-centro{
+		height: 1.8%;
+		width: 2.5%;
+		&.lesionCaries{
+			background-image: url('../images/marcador_lesioncaries_center.png');
+		}
+	}
+
+
 	//CUADRANTE UNO
 	@for $i from 1 through 16{
 		.cursor-#{$i} {
@@ -450,6 +618,34 @@ $altoDienteCentro: 9.7%;
 		.tratamientoPulparPP-#{$i}{
 			left: (($i - 1) * $anchoDiente);
 			top: 16%;
+		}
+
+		.direccion-arriba-#{$i}{
+			left: (($i - 1) * $anchoDiente) + 0.6%;
+			top: 14.6%;
+		}
+
+		.direccion-abajo-#{$i}{
+			left: (($i - 1) * $anchoDiente) + 0.6%;
+			top: 17.5%;
+			&.nocentro{
+				top: 16.7%;
+			}
+		}
+
+		.direccion-izquierda-#{$i}{
+			left: (($i - 1) * $anchoDiente) + 0.6%;
+			top: 14.6%;
+		}
+
+		.direccion-derecha-#{$i}{
+			left: (($i - 1) * $anchoDiente) + 4.6%;
+			top: 14.6%;
+		}
+
+		.direccion-centro-#{$i}{
+			left: (($i - 1) * $anchoDiente) + 1.9%;
+			top: 15.6%;
 		}
 
 	}
@@ -589,6 +785,34 @@ $altoDienteCentro: 9.7%;
 		.tratamientoPulparPP-#{$i}{
 			left: (($i - 14) * $anchoDiente);
 			top: 37.6%;
+		}
+
+		.direccion-arriba-#{$i}{
+			left: (($i - 14) * $anchoDiente) + 0.6%;
+			top: 36.5%;
+		}
+
+		.direccion-abajo-#{$i}{
+			left: (($i - 14) * $anchoDiente) + 0.6%;
+			top: 39.2%;
+			&.nocentro{
+				top: 38.5%;
+			}
+		}
+
+		.direccion-izquierda-#{$i}{
+			left: (($i - 14) * $anchoDiente) + 0.6%;
+			top: 36.4%;
+		}
+
+		.direccion-derecha-#{$i}{
+			left: (($i - 14) * $anchoDiente) + 4.6%;
+			top: 36.4%;
+		}
+
+		.direccion-centro-#{$i}{
+			left: (($i - 14) * $anchoDiente) + 1.9%;
+			top: 37.5%;
 		}
 		
 	}
@@ -753,6 +977,34 @@ $altoDienteCentro: 9.7%;
 			left: (($i - 24) * $anchoDiente);
 			top: 59.4%;
 		}
+
+		.direccion-arriba-#{$i}{
+			left: (($i - 24) * $anchoDiente) + 0.6%;
+			top: 58.1%;
+		}
+
+		.direccion-abajo-#{$i}{
+			left: (($i - 24) * $anchoDiente) + 0.6%;
+			top: 60.9%;
+			&.nocentro{
+				top: 60%;
+			}
+		}
+
+		.direccion-izquierda-#{$i}{
+			left: (($i - 24) * $anchoDiente) + 0.7%;
+			top: 58.1%;
+		}
+
+		.direccion-derecha-#{$i}{
+			left: (($i - 24) * $anchoDiente) + 4.7%;
+			top: 58.1%;
+		}
+
+		.direccion-centro-#{$i}{
+			left: (($i - 24) * $anchoDiente) + 1.9%;
+			top: 59.2%;
+		}
 	}
 
 	//CUADRANTE CUATRO
@@ -914,6 +1166,34 @@ $altoDienteCentro: 9.7%;
 		.tratamientoPulparPP-#{$i}{
 			left: (($i - 37) * $anchoDiente);
 			top: 81.83%;
+		}
+
+		.direccion-arriba-#{$i}{
+			left: (($i - 37) * $anchoDiente) + 0.6%;
+			top: 80.5%;
+		}
+
+		.direccion-abajo-#{$i}{
+			left: (($i - 37) * $anchoDiente) + 0.6%;
+			top: 83.5%;
+			&.nocentro{
+				top: 82.5%;
+			}
+		}
+
+		.direccion-izquierda-#{$i}{
+			left: (($i - 37) * $anchoDiente) + 0.7%;
+			top: 80.5%;
+		}
+
+		.direccion-derecha-#{$i}{
+			left: (($i - 37) * $anchoDiente) + 4.7%;
+			top: 80.5%;
+		}
+
+		.direccion-centro-#{$i}{
+			left: (($i - 37) * $anchoDiente) + 1.9%;
+			top: 81.7%;
 		}
 
 	}
