--- a/assets/odontograma/pug/hallazgos.pug
+++ b/assets/odontograma/pug/hallazgos.pug
@@ -168,7 +168,32 @@
     div(class="hallazgos lesionCaries direccion-derecha centro direccion-derecha-"+n)
     - n++
 
-- var n = 1;
+//- var n = 1;
   while n <= 52
     div(class="hallazgos lesionCaries direccion-centro direccion-centro-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos restauracionTemporal direccion-arriba nocentro direccion-arriba-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos restauracionTemporal direccion-abajo nocentro direccion-abajo-"+n)
+    - n++
+
+//- var n = 1;
+  while n <= 52
+    div(class="hallazgos restauracionTemporal direccion-izquierda nocentro direccion-izquierda-"+n)
+    - n++
+
+- var n = 1;
+  while n <= 52
+    div(class="hallazgos restauracionTemporal direccion-derecha nocentro direccion-derecha-"+n)
+    - n++
+
+- var n = 1;
+  while n <= 52
+    div(class="hallazgos restauracionTemporal direccion-centro direccion-centro-"+n)
     - n++
