--- a/assets/odontograma/scss/odontograma.scss
+++ b/assets/odontograma/scss/odontograma.scss
@@ -25,7 +25,26 @@ $categoria_18_11: 18 17 16 15 14 13 12 11 21 22 23 25 26 27 28 55 54 53 52 51 61
 					height: 20px;
 					background-size: 50%;
 					&.lesionCaries{
-						background-image: url('../images/marcador_lesioncaries_center.png');
+						background-image: url('../images/marcador_malorelleno_center.png');
+					}
+					&.sellantes{
+						&.bueno{
+							background-image: url('../images/marcador_bueno_center.png');
+						}
+						&.malo{
+							background-image: url('../images/marcador_malo_center.png');
+						}
+					}
+					&.restauracionTemporal{
+						background-image: url('../images/marcador_malo_center.png');
+					}
+					&.restauracionDefinitiva{
+						&.bueno{
+							background-image: url('../images/marcador_buenorelleno_center.png');
+						}
+						&.malo{
+							background-image: url('../images/marcador_malorelleno_center.png');
+						}
 					}
 					&.giro{
 						top: 10.5%;
@@ -36,7 +55,26 @@ $categoria_18_11: 18 17 16 15 14 13 12 11 21 22 23 25 26 27 28 55 54 53 52 51 61
 					height: 10px;
 					background-size: 90% 90%;
 					&.lesionCaries{
-						background-image: url('../images/marcador01_lesioncaries_top_bottom.png');
+						background-image: url('../images/marcador01_malorelleno_top_bottom.png');
+					}
+					&.sellantes{
+						&.bueno{
+							background-image: url('../images/marcador01_bueno_top_bottom.png');
+						}
+						&.malo{
+							background-image: url('../images/marcador01_malo_top_bottom.png');
+						}
+					}
+					&.restauracionTemporal{
+						background-image: url('../images/marcador01_malo_top_bottom.png');
+					}
+					&.restauracionDefinitiva{
+						&.bueno{
+							background-image: url('../images/marcador01_buenorelleno_top_bottom.png');
+						}
+						&.malo{
+							background-image: url('../images/marcador01_malorelleno_top_bottom.png');
+						}
 					}
 				}
 				&-arriba{
@@ -56,10 +94,30 @@ $categoria_18_11: 18 17 16 15 14 13 12 11 21 22 23 25 26 27 28 55 54 53 52 51 61
 					width: 15px;
 					height: 38px;
 					background-size: 90% 90%;
-					&.lesionCaries{
-						background-image: url('../images/marcador01_lesioncaries_left_right.png');
-					}
 					bottom: 0%;
+					&.lesionCaries{
+						background-image: url('../images/marcador01_malorelleno_left_right.png');
+					}
+					&.sellantes{
+						&.bueno{
+							background-image: url('../images/marcador01_bueno_left_right.png');
+						}
+						&.malo{
+							background-image: url('../images/marcador01_malo_left_right.png');
+						}
+					}
+					&.restauracionTemporal{
+						background-image: url('../images/marcador01_malo_left_right.png');
+					}
+					&.restauracionDefinitiva{
+						&.bueno{
+							background-image: url('../images/marcador01_buenorelleno_left_right.png');
+						}
+						&.malo{
+							background-image: url('../images/marcador01_malorelleno_left_right.png');
+						}
+					}
+					
 					&.giro{
 						top: 0%;
 					}
@@ -77,7 +135,26 @@ $categoria_18_11: 18 17 16 15 14 13 12 11 21 22 23 25 26 27 28 55 54 53 52 51 61
 					width: 98%;
 					height: 18px;
 					&.lesionCaries{
-						background-image: url('../images/marcador02_lesioncaries_top_bottom.png');
+						background-image: url('../images/marcador02_malorelleno_top_bottom.png');
+					}
+					&.sellantes{
+						&.bueno{
+							background-image: url('../images/marcador02_bueno_top_bottom.png');
+						}
+						&.malo{
+							background-image: url('../images/marcador02_malo_top_bottom.png');
+						}
+					}
+					&.restauracionTemporal{
+						background-image: url('../images/marcador02_malo_top_bottom.png');
+					}
+					&.restauracionDefinitiva{
+						&.bueno{
+							background-image: url('../images/marcador02_buenorelleno_top_bottom.png');
+						}
+						&.malo{
+							background-image: url('../images/marcador02_malorelleno_top_bottom.png');
+						}
 					}
 				}
 				&-arriba{
@@ -98,8 +175,28 @@ $categoria_18_11: 18 17 16 15 14 13 12 11 21 22 23 25 26 27 28 55 54 53 52 51 61
 					height: 38px;
 					background-size: 90% 90%;
 					&.lesionCaries{
-						background-image: url('../images/marcador02_lesioncaries_left_right.png');
+						background-image: url('../images/marcador02_malorelleno_left_right.png');
 					}
+					&.sellantes{
+						&.bueno{
+							background-image: url('../images/marcador02_bueno_left_right.png');
+						}
+						&.malo{
+							background-image: url('../images/marcador02_malo_left_right.png');
+						}
+					}
+					&.restauracionTemporal{
+						background-image: url('../images/marcador02_malo_left_right.png');
+					}
+					&.restauracionDefinitiva{
+						&.bueno{
+							background-image: url('../images/marcador02_buenorelleno_left_right.png');
+						}
+						&.malo{
+							background-image: url('../images/marcador02_malorelleno_left_right.png');
+						}
+					}
+					
 					bottom: 0%;
 					&.giro{
 						top: 0;
@@ -444,12 +541,50 @@ $altoDienteCentro: 9.7%;
 		background-size: 100% 100%;
 		&.centro{
 			&.lesionCaries{
-				background-image: url('../images/marcador01_lesioncaries_left_right.png');
+				background-image: url('../images/marcador01_malorelleno_left_right.png');
+			}
+			&.sellantes{
+				&.bueno{
+					background-image: url('../images/marcador01_bueno_left_right.png');
+				}
+				&.malo{
+					background-image: url('../images/marcador01_malo_left_right.png');
+				}
+			}
+			&.restauracionTemporal{
+				background-image: url('../images/marcador01_malo_left_right.png');
+			}
+			&.restauracionDefinitiva{
+				&.bueno{
+					background-image: url('../images/marcador01_buenorelleno_left_right.png');
+				}
+				&.malo{
+					background-image: url('../images/marcador01_malorelleno_left_right.png');
+				}
 			}
 		}
 		&.nocentro{
 			&.lesionCaries{
-				background-image: url('../images/marcador02_lesioncaries_left_right.png');
+				background-image: url('../images/marcador02_malorelleno_left_right.png');
+			}
+			&.sellantes{
+				&.bueno{
+					background-image: url('../images/marcador02_bueno_left_right.png');
+				}
+				&.malo{
+					background-image: url('../images/marcador02_malo_left_right.png');
+				}
+			}
+			&.restauracionTemporal{
+				background-image: url('../images/marcador02_malo_left_right.png');
+			}
+			&.restauracionDefinitiva{
+				&.bueno{
+					background-image: url('../images/marcador02_buenorelleno_left_right.png');
+				}
+				&.malo{
+					background-image: url('../images/marcador02_malorelleno_left_right.png');
+				}
 			}
 		}
 	}
@@ -460,13 +595,51 @@ $altoDienteCentro: 9.7%;
 		background-size: 100% 100%;
 		&.centro{
 			&.lesionCaries{
-				background-image: url('../images/marcador01_lesioncaries_top_bottom.png');
+				background-image: url('../images/marcador01_malorelleno_top_bottom.png');
+			}
+			&.sellantes{
+				&.bueno{
+					background-image: url('../images/marcador01_bueno_top_bottom.png');
+				}
+				&.malo{
+					background-image: url('../images/marcador01_malo_top_bottom.png');
+				}
+			}
+			&.restauracionTemporal{
+				background-image: url('../images/marcador01_malo_top_bottom.png');
+			}
+			&.restauracionDefinitiva{
+				&.bueno{
+					background-image: url('../images/marcador01_buenorelleno_top_bottom.png');
+				}
+				&.malo{
+					background-image: url('../images/marcador01_malorelleno_top_bottom.png');
+				}
 			}
 		}
 		&.nocentro{
 			height: 2%;
 			&.lesionCaries{
-				background-image: url('../images/marcador02_lesioncaries_top_bottom.png');
+				background-image: url('../images/marcador02_malorelleno_top_bottom.png');
+			}
+			&.sellantes{
+				&.bueno{
+					background-image: url('../images/marcador02_bueno_top_bottom.png');
+				}
+				&.malo{
+					background-image: url('../images/marcador02_malo_top_bottom.png');
+				}
+			}
+			&.restauracionTemporal{
+				background-image: url('../images/marcador02_malo_top_bottom.png');
+			}
+			&.restauracionDefinitiva{
+				&.bueno{
+					background-image: url('../images/marcador02_buenorelleno_top_bottom.png');
+				}
+				&.malo{
+					background-image: url('../images/marcador02_malorelleno_top_bottom.png');
+				}
 			}
 		}
 	}
@@ -476,11 +649,33 @@ $altoDienteCentro: 9.7%;
 	}
 
 	.direccion-centro{
-		height: 1.8%;
+		height: 1.9%;
 		width: 2.5%;
+		background-size: 100%;
+		background-repeat: no-repeat;
 		&.lesionCaries{
-			background-image: url('../images/marcador_lesioncaries_center.png');
+			background-image: url('../images/marcador_malorelleno_center.png');
 		}
+		&.sellantes{
+			&.bueno{
+				background-image: url('../images/marcador_bueno_center.png');
+			}
+			&.malo{
+				background-image: url('../images/marcador_malo_center.png');
+			}
+		}
+		&.restauracionTemporal{
+			background-image: url('../images/marcador_malo_center.png');
+		}
+		&.restauracionDefinitiva{
+			&.bueno{
+				background-image: url('../images/marcador_buenorelleno_center.png');
+			}
+			&.malo{
+				background-image: url('../images/marcador_malorelleno_center.png');
+			}
+		}
+		
 	}
 
 
@@ -634,7 +829,7 @@ $altoDienteCentro: 9.7%;
 		}
 
 		.direccion-izquierda-#{$i}{
-			left: (($i - 1) * $anchoDiente) + 0.6%;
+			left: (($i - 1) * $anchoDiente) + 0.55%;
 			top: 14.6%;
 		}
 
@@ -645,7 +840,7 @@ $altoDienteCentro: 9.7%;
 
 		.direccion-centro-#{$i}{
 			left: (($i - 1) * $anchoDiente) + 1.9%;
-			top: 15.6%;
+			top: 15.9%;
 		}
 
 	}
@@ -1182,7 +1377,7 @@ $altoDienteCentro: 9.7%;
 		}
 
 		.direccion-izquierda-#{$i}{
-			left: (($i - 37) * $anchoDiente) + 0.7%;
+			left: (($i - 37) * $anchoDiente) + 0.6%;
 			top: 80.5%;
 		}
 
